--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-  <h1>Abram S</h1>
+  <h1>Abram S <br></h1>
   <p>Let's roll!</p>
   <p>I used to run all the time, however now you'll find me riding my bike most of the time or using resistance bands to keep in shape. </p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
